# local-media-viewer

./: .gitignore  config.yaml  dockerfile  pyproject.toml
src/: global_settings.py  server.py
src/api/: media.py
src/static/: md-card.css  md-card.js
src/static/material-theme/: dark-hc.css  dark-mc.css  light-hc.css  light-mc.css
src/templates/: base.html  item.html  list.html
src/utils/: cli.py  file.py  time.py
